almost done with non-responsive.

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <div class="container"> 
         <div class="left">
             <p class = "bold section-title">About Me</p>
-        </br>
-        <p class = "techfont list">
-            I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. blah blah blah.
+        <img src="myNewPhoto.png" class="circle" style="margin:0 auto; display:block">
+        <p class = "techfont about-me" style="text-align:center">
+            I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. I like what I study and would like to make a career in technology. Currently looking for opportunities following my graduation in spring 2016.  
         </p>
     </div>
     <div class="right">
@@ -193,7 +193,7 @@
                     <p class="techfont white-text">Spring 2015</p>
                 </div>
                 <div class="col l8 m7 offset-m1">
-                    <p class="techfont white-text hide-on-small-only">What I did at Trinity</p>
+                    <p class="techfont white-text hide-on-small-only">I studied abroad at Trinity during the spring semester of my junior year.</p>
                 </div>
             </div>
             <div class="row school valign-wrapper">
@@ -208,7 +208,7 @@
                 </div>
                 <div class="col l8 m7 offset-m1">
                     <p class = "techfont white-text hide-on-small-only">
-                        I bounced around a couple of different majors until I decided on becoming the Computer Science/Mathematical Science major that I am today. I took my first Computer Science class in the fall semester of sophomore year and have enjoyed it ever since. Colby's CS classes are mostly taught in Python and Java, but we also receive a healthy dose of C/C++ as well as exposure to other languages such as Ruby, Swift, and HTML/Javascript/CSS.
+                        
                     </p>
                 </div>
             </div> 
@@ -223,18 +223,18 @@
                     <p class="techfont white-text">Diploma</p>
                 </div>
                 <div class="col l8 m7 offset-m1">
-                    <p class = "techfont white-text hide-on-small-only">What I did at Nobles</p>
+                    <p class = "techfont white-text hide-on-small-only">Attended high school at Noble and Greenough</p>
                 </div>
             </div>
         </div>
     </div>
 <div class="parallax-container colby" id="soccerShot">
     <div class="parallax">
-        <img src="nobles-snowy.jpg">
+        <img src="trinity-library.jpg">
     </div>
     <div class="card darken-1" style="top:20%;width:20%">
         <div class="card-content">
-              <p>This is where I went to high school. (Seriously)</p>
+              <p>The Library at Trinity College Dublin (I just studied abroad here!)</p>
             </div>
         </div>
 </div>
@@ -312,7 +312,7 @@ $(document).ready(function(){
 
             // get how far we've scrolled from the top of our screen
             var offset = $(window).scrollTop();
-            offset     = offset * .092;
+            offset     = offset * .0925;
 
             // apply the offset as a css transform to our buttons
             $('#facebook, #linkedin').css({
