--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
         <div class="parallax">
             <img src="colby.jpg">
         </div>
-
+        <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar">
+                    <ul class="section table-of-contents fixed">
+                        <li><a href="#home" class="black-text" id="home_side">Home</a></li>
+                        <li><a href="#about_me" class="black-text" id="about_side">About Me</a></li>
+                        <li><a href="#education" class="black-text" id="edu_side">Education</a></li>
+                        <li><a href="#professional_experience" class="black-text" id="prof_side">Professional Experience</a></li>
+                        <li><a href="#projects" class="black-text" id="proj_side">Projects</a></li>
+                        <li style="padding-top:30px; padding-left:20px"><a id="facebook" href="https://www.facebook.com/danny.vog"><img src="facebook.png"></a></li>
+                        <li style="padding-left:20px"><a id="twitter" href="https://twitter.com/doeboydan"><img src="twitter.png"></a></li>
+                        <li style="padding-left:20px"><a id="linkedin" href="https://www.linkedin.com/in/dhvogel"><img src="linkedin.png"></a></li>
+                        <li style="padding-left:20px"><a id="github" href="https://github.com/dhvogel"><img src="github.png"></a></li>
+                    </ul>
+                </div>
         <div class="homepage overlay">
             <div class ="container">
                 
@@ -85,19 +97,6 @@
     </div>
     <div class="right">
         <p class = "bold section-title">My Interests</p>
-        <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar">
-                    <ul class="section table-of-contents">
-                        <li><a href="#home" class="black-text" id="home_side">Home</a></li>
-                        <li><a href="#about_me" class="black-text" id="about_side">About Me</a></li>
-                        <li><a href="#education" class="black-text" id="edu_side">Education</a></li>
-                        <li><a href="#professional_experience" class="black-text" id="prof_side">Professional Experience</a></li>
-                        <li><a href="#projects" class="black-text" id="proj_side">Projects</a></li>
-                        <li style="padding-top:30px; padding-left:20px"><a id="facebook" href="https://www.facebook.com/danny.vog"><img src="facebook.png"></a></li>
-                        <li style="padding-left:20px"><a id="twitter" href="https://twitter.com/doeboydan"><img src="twitter.png"></a></li>
-                        <li style="padding-left:20px"><a id="linkedin" href="https://www.linkedin.com/in/dhvogel"><img src="linkedin.png"></a></li>
-                        <li style="padding-left:20px"><a id="github" href="https://github.com/dhvogel"><img src="github.png"></a></li>
-                    </ul>
-                </div>
         <ul class="collection" id="staggered-list" style="display:none"> 
             <li class="collection-item avatar">
                 <div class="container">
@@ -172,7 +171,7 @@
     <div class="parallax">
         <img src="actionSoccer.jpg">
     </div>
-    <div class="card darken-1" style="top:20%;width:20%">
+    <div class="card darken-1 right" style="top:20%;width:20%">
         <div class="card-content">
               <p>Me playing a game of sports-ball. (I'm on the right!)</p>
             </div>
@@ -184,7 +183,7 @@
         <div class="container section scrollspy" id="education">
 
             <div class="row school valign-wrapper">
-                <div class="col l1">
+                <div class="col l">
                     <img src="trinitySeal.png" class="circle valign" height="75" width="75">
                 </div>
                 <div class="col l3 m4" style="margin-left:20px">
@@ -204,11 +203,11 @@
                     <p class="bold white-text">Colby College</p>
                     <p class="techfont white-text">Waterville, ME</p>
                     <p class="techfont white-text">2012-2016</p>
-                    <p class="techfont white-text">B.A. - Computer Science/Mathematical Scienc
+                    <p class="techfont white-text">B.A. - Computer Science/Mathematical Science
                 </div>
                 <div class="col l8 m7 offset-m1">
                     <p class = "techfont white-text hide-on-small-only">
-                        
+                        Currently at Colby finishing up my last year of studies
                     </p>
                 </div>
             </div> 
@@ -232,7 +231,7 @@
     <div class="parallax">
         <img src="trinity-library.jpg">
     </div>
-    <div class="card darken-1" style="top:20%;width:20%">
+    <div class="card darken-1 right" style="top:20%;width:20%">
         <div class="card-content">
               <p>The Library at Trinity College Dublin (I just studied abroad here!)</p>
             </div>
