working on responsiveness

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="left">
             <p class = "bold section-title">About Me</p>
         <img src="myNewPhoto.png" class="circle" style="margin:0 auto; display:block">
-        <p class = "techfont about-me" style="text-align:center">
+        <p class = "techfont about-me my-flow-text" style="text-align:center">
             I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. I like what I study and would like to make a career in technology. Currently looking for opportunities following my graduation in spring 2016.  
         </p>
     </div>
@@ -177,7 +177,6 @@
         </div>
 </div>
 <div class = "block blue">
-    <div class = "outer">
         <p class="bold section-title white-text">Education</p>
         <div class="container section scrollspy" id="education">
 
@@ -202,7 +201,7 @@
                     <p class="bold white-text">Colby College</p>
                     <p class="techfont white-text">Waterville, ME</p>
                     <p class="techfont white-text">2012-2016</p>
-                    <p class="techfont white-text">B.A. - Computer Science/Mathematical Science
+                    <p class="techfont white-text">B.A. - Computer Science/Mathematical Science</p>
                 </div>
                 <div class="col l8 m7 offset-m1">
                     <p class = "techfont white-text hide-on-small-only">
@@ -237,63 +236,63 @@
         </div>
 </div>
     <div class = "block white section scrollspy" id="professional_experience">
-        <div class = "container">
+        <div class = "container my-flow-text">
             <p class="bold section-title">Professional Experience</p>
                 <div class="row">
-                    <div class="col l2 m4">
-                        <p class="bold">Capital One</p>
-                        <p class="techfont">McLean, VA</p>
-                        <p class="techfont">Summer 2015</p>
+                    <div class="col l2 m3 s12">
+                        <p class="bold my-flow-text">Capital One</p>
+                        <p class="techfont my-flow-text">McLean, VA</p>
+                        <p class="techfont my-flow-text">Summer 2015</p>
                         <img src="capOneTech.jpeg" height="75" width="75" class="circle hide-on-med-and-down" style="margin:auto"/>
                     </div>
-                    <div class="col l4 m8" style="border-right:1px solid black">
-                        <p class="bold">Software Engineering Intern</p>
-                        <ul class="collection hide-on-med-and-down">
-                            <li class="collection-item no-pad">Develop and package DASH agile reporting tool, to be deployed to open-source community at end of internship.</li>
-                            <li class="collection-item no-pad">Implement security alerts in Capital One&#39s Digital Wallet app with the Apple Pay integration team.</li>  
-                            <li class="collection-item no-pad">Provision new cloud-based Development environments running on Amazon Web Services with CloudOps team.</li>
+                    <div class="col l4 m9 s12 exp-border-right">
+                        <p class="bold my-flow-text">Software Engineering Intern</p>
+                        <ul class="collection hide-on-small-only">
+                            <li class="collection-item no-pad my-flow-text">Develop and package DASH agile reporting tool, to be deployed to open-source community at end of internship.</li>
+                            <li class="collection-item no-pad my-flow-text">Implement security alerts in Capital One&#39s Digital Wallet app with the Apple Pay integration team.</li>  
+                            <li class="collection-item no-pad my-flow-text">Provision new cloud-based Development environments running on Amazon Web Services with CloudOps team.</li>
                         </ul>
                     </div>
-                    <div class="col l2 m4">
-                        <p class="bold">Microsoft</p>
-                        <p class="techfont">Dublin, Ireland</p>
-                        <p class="techfont">Spring 2015</p>
+                    <div class="col l2 m3 s12">
+                        <p class="bold my-flow-text">Microsoft</p>
+                        <p class="techfont my-flow-text">Dublin, Ireland</p>
+                        <p class="techfont my-flow-text">Spring 2015</p>
                         <img src="microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
-                    <div class="col l4 m8">
-                        <p class="bold">Student-Client Programming Project</p>
-                        <ul class="collection hide-on-med-and-down">
-                            <li class="collection-item no-pad">Worked closely with Microsoft&#39s software engineers at the Microsoft Dublin campus to develop a web app for Microsoft&#39s Office App Store.</li>
-                            <li class="collection-item no-pad">Participated in weekly code and design reviews with Microsoft&#39s software engineers.</li>  
-                            <li class="collection-item no-pad">Published app to Microsoft Office Store at culmination. <a href="https://store.office.com/easy-excel-search-WA104379363.aspx?assetid=WA104379363&sourcecorrid=4f57d547-3d6a-4706-a84d-e269c510fc00&searchapppos=0" target="_blank">Check it out!</a>.</li>
+                    <div class="col l4 m9 s12">
+                        <p class="bold my-flow-text">Student-Client Programming Project</p>
+                        <ul class="collection hide-on-small-only">
+                            <li class="collection-item no-pad my-flow-text">Worked closely with Microsoft&#39s software engineers at the Microsoft Dublin campus to develop a web app for Microsoft&#39s Office App Store.</li>
+                            <li class="collection-item no-pad my-flow-text">Participated in weekly code and design reviews with Microsoft&#39s software engineers.</li>  
+                            <li class="collection-item no-pad my-flow-text">Published app to Microsoft Office Store at culmination. <a href="https://store.office.com/easy-excel-search-WA104379363.aspx?assetid=WA104379363&sourcecorrid=4f57d547-3d6a-4706-a84d-e269c510fc00&searchapppos=0" target="_blank">Check it out!</a>.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col l2">
-                        <p class="bold">Colby College</p>
-                        <p class="techfont">Waterville, ME</p>
-                        <p class="techfont">Spring 2014-Present</p>
+                    <div class="col l2 m3 s12">
+                        <p class="bold my-flow-text">Colby College</p>
+                        <p class="techfont my-flow-text">Waterville, ME</p>
+                        <p class="techfont my-flow-text">Spring 2014-Present</p>
                         <img src="colby-seal.png" height="75" width="75" class="hide-on-med-and-down">
                     </div>
-                    <div class="col l4" style="border-right:1px solid black">
-                        <p class="bold">Teaching Assistant - Colby CS Department</p>
-                        <ul class="collection hide-on-med-and-down">
-                            <li class="collection-item no-pad">Aid computer science students with their assignments during weekly office hours.</li>
-                            <li class="collection-item no-pad">Serve as a general resource for students taking computer science courses, inside and outside of the computer lab.</li>  
+                    <div class="col l4 m9 s12 exp-border-right">
+                        <p class="bold my-flow-text">Teaching Assistant - Colby CS Department</p>
+                        <ul class="collection hide-on-small-only">
+                            <li class="collection-item no-pad my-flow-text">Aid computer science students with their assignments during weekly office hours.</li>
+                            <li class="collection-item no-pad my-flow-text">Serve as a general resource for students taking computer science courses, inside and outside of the computer lab.</li>  
                         </ul>
                     </div>
-                    <div class="col l2">
-                        <p class="bold">Unum</p>
-                        <p class="techfont">Portland, ME</p>
-                        <p class="techfont">Summer 2014</p>
+                    <div class="col l2 m3 s12">
+                        <p class="bold my-flow-text">Unum</p>
+                        <p class="techfont my-flow-text">Portland, ME</p>
+                        <p class="techfont my-flow-text">Summer 2014</p>
                         <img src="unumLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
-                    <div class="col l4">
-                        <p class="bold">Software Developer Intern</p>
-                        <ul class="collection hide-on-med-and-down">
-                            <li class="collection-item no-pad">Automated several previously manual tasks including daily report analyses and monthly metric generation, saving my department roughly 5 hours per week.</li>
-                            <li class="collection-item no-pad">Participated in intern-wide Innovation Challenge, an intensive 6-week project in which interns work in teams to find a problem and devise a technical solution, presenting findings to C-Level Executives at culmination.</li>  
+                    <div class="col l4 m9 s12">
+                        <p class="bold my-flow-text">Software Developer Intern</p>
+                        <ul class="collection hide-on-small-only">
+                            <li class="collection-item no-pad my-flow-text">Automated several previously manual tasks including daily report analyses and monthly metric generation, saving my department roughly 5 hours per week.</li>
+                            <li class="collection-item no-pad my-flow-text">Participated in intern-wide Innovation Challenge, an intensive 6-week project in which interns work in teams to find a problem and devise a technical solution, presenting findings to C-Level Executives at culmination.</li>  
                         </ul>
                     </div>
                 </div>
