--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
     <div class="card darken-1 right" style="top:20%;width:20%">
         <div class="card-content">
-              <p>Me playing a game of sports-ball. (I'm on the right!)</p>
+              <p>Me playing a game of soccer. (I'm on the right!)</p>
             </div>
         </div>
 </div>
