changed page load

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="parallax-container colby section scrollspy" id="home">
         <div class="parallax">
-            <img src="colby.jpg">
+            <img src="colby.jpg" preload="auto">
         </div>
         <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar">
                     <ul class="section table-of-contents fixed">
