title picture added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
        <title>Daniel Vogel's Webpage</title>
        <script src="jquery-1.9.1.min.js"></script>
        <link rel="stylesheet" type="text/css" href="materialize.css">
+       <link rel="shortcut icon" href="myNewPhoto.png"/>
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
        <script src="materialize.js"></script>
        <script src="smooth-scroll.js"></script>
