working on responsiveness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="parallax-container colby section scrollspy" id="home">
         <div class="parallax">
-            <img src="colby.jpg" preload=>
+            <img src="colby.jpg" preload="auto">
         </div>
         <div class="col hide-on-med-and-down m3 l2 navbar" id="navbar">
                     <ul class="section table-of-contents fixed">
@@ -30,12 +30,12 @@
             <div class ="container">
                 
                 <div class="row">
-                    <div class="col l6 m6">
-                        <span class="techfont white-text flow-text center-align"><h1>D A N I E L</h1></span>
+                    <div class="col l6 m12">
+                        <span class="techfont white-text title-font center-align" style="text-align:center; display:block">D A N I E L</span>
                     </div>
 
-                    <div class="col l5 offset-l1 m6">
-                        <span class="techfont white-text flow-text center-align"><h1>V O G E L</h1></span>
+                    <div class="col l6 m12">
+                        <span class="techfont white-text title-font center-align" style="display:block">V O G E L</span>
                     </div>
                 </div>
                 <div class="center">
