--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="center">
-                  <img src="colby-seal.png" height="200" width="200" onload="Materialize.fadeInImage(this);"/>
+                  <img src="colby-seal.png" class="hide-on-med-and-down" height="200" width="200" onload="Materialize.fadeInImage(this);"/>
               </div>
               <div class="row">
                 <div class="col s4">
@@ -88,14 +88,15 @@
 </div>
 <div class ="block white section scrollspy" id="about_me">
     <div class="container"> 
-        <div class="left">
+        <div class="row">
+        <div class="col l6 m6 s12">
             <p class = "bold section-title">About Me</p>
-        <img src="myNewPhoto.png" class="circle" style="margin:0 auto; display:block">
+        <img src="myNewPhoto.png" class="circle hide-on-med-and-down" style="margin:0 auto; display:block">
         <p class = "techfont about-me my-flow-text" style="text-align:center">
             I'm a third-year Computer Science/Mathematical Science double major at <a href="https://www.colby.edu" target="_blank">Colby College</a> in Waterville, Maine. I like what I study and would like to make a career in technology. Currently looking for opportunities following my graduation in spring 2016.  
         </p>
     </div>
-    <div class="right">
+    <div class="col l6 m6 s12">
         <p class = "bold section-title">My Interests</p>
         <ul class="collection" id="staggered-list" style="display:none"> 
             <li class="collection-item avatar">
@@ -105,7 +106,7 @@
                             <img src="soccer.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
                         <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Soccer</span>
+                            <span class="title flow-text valign techfont bold interest-text">Soccer</span>
                             <p class="hide-on-med-and-down">Captain - Colby Men's Soccer (2015)</p>
                         </div>
                     </div>
@@ -118,7 +119,7 @@
                             <img src="stuGov2.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
                         <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Student Government</span>
+                            <span class="title flow-text valign techfont bold interest-text">Student Government</span>
                             <p class="hide-on-med-and-down">President - Colby Class of 2016</p>
                         </div>
                     </div>
@@ -131,7 +132,7 @@
                             <img src="chess.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
                         <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Chess</span>
+                            <span class="title flow-text valign techfont bold interest-text">Chess</span>
                             <p class="hide-on-med-and-down">South Shore Interscholastic Chess League - 2nd Place</p>
                         </div>
                     </div>
@@ -144,7 +145,7 @@
                             <img src="pottery.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
                         <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Pottery</span>
+                            <span class="title flow-text valign techfont bold interest-text">Pottery</span>
                             <p class="hide-on-med-and-down">Colby Pottery Club</p>
                         </div>
                     </div>
@@ -157,13 +158,14 @@
                             <img src="mario.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
                         <div class="col s8 offset-s2">
-                            <span class="title flow-text valign techfont bold">Mario Kart</span>
+                            <span class="title flow-text valign techfont bold interest-text">Mario Kart</span>
                             <p class="hide-on-med-and-down">Multi-Time Mushroom Cup Champion</p>
                         </div>
                     </div>
                 </div>
             </li>
-        </ul>    
+        </ul>
+        </div>    
     </div>
 </div>
 </div>
@@ -171,7 +173,7 @@
     <div class="parallax">
         <img src="actionSoccer.jpg">
     </div>
-    <div class="card darken-1 right" style="top:20%;width:20%">
+    <div class="card darken-1 right parallax-tag" style="top:20%;width:20%">
         <div class="card-content">
               <p>Me playing a game of soccer. (I'm on the right!)</p>
             </div>
@@ -234,13 +236,13 @@
     <div class="parallax">
         <img src="trinity-library.jpg">
     </div>
-    <div class="card darken-1 right" style="top:20%;width:20%">
+    <div class="card darken-1 right parallax-tag" style="top:20%;width:20%">
         <div class="card-content">
               <p>The Library at Trinity College Dublin (I just studied abroad here!)</p>
             </div>
         </div>
 </div>
-    <div class = "block white section scrollspy" id="professional_experience">
+    <div class = "block white section scrollspy" id="professional_experience" style="height:auto">
         <div class = "container my-flow-text">
             <p class="bold section-title">Professional Experience</p>
                 <div class="row">
