small prof exp style change

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </div>
         </div>
 </div>
-    <div class = "block white section scrollspy" id="professional_experience" style="height:auto">
+    <div class = "block white section scrollspy prof-exp" id="professional_experience">
         <div class = "container my-flow-text">
             <p class="bold section-title">Professional Experience</p>
                 <div class="row">
