interests responsive change

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <li class="collection-item avatar">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col s2">
+                        <div class="col m2">
                             <img src="soccer.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign techfont bold interest-text">Soccer</span>
                             <p class="hide-on-med-and-down">Captain - Colby Men's Soccer (2015)</p>
                         </div>
@@ -115,10 +115,10 @@
             <li class="collection-item avatar">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col s2">
+                        <div class="col m2">
                             <img src="stuGov2.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign techfont bold interest-text">Student Government</span>
                             <p class="hide-on-med-and-down">President - Colby Class of 2016</p>
                         </div>
@@ -128,10 +128,10 @@
             <li class="collection-item avatar valign-wrapper">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col s2">
+                        <div class="col m2">
                             <img src="chess.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign techfont bold interest-text">Chess</span>
                             <p class="hide-on-med-and-down">South Shore Interscholastic Chess League - 2nd Place</p>
                         </div>
@@ -141,10 +141,10 @@
             <li class="collection-item avatar valign-wrapper">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col s2">
+                        <div class="col m2">
                             <img src="pottery.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign techfont bold interest-text">Pottery</span>
                             <p class="hide-on-med-and-down">Colby Pottery Club</p>
                         </div>
@@ -154,10 +154,10 @@
             <li class="collection-item avatar valign-wrapper">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
-                        <div class="col s2">
+                        <div class="col m2">
                             <img src="mario.png" class="hide-on-small-only" style="margin-top:10px;">
                         </div>
-                        <div class="col s8 offset-s2">
+                        <div class="col m8 s12 offset-m2">
                             <span class="title flow-text valign techfont bold interest-text">Mario Kart</span>
                             <p class="hide-on-med-and-down">Multi-Time Mushroom Cup Champion</p>
                         </div>
