--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 </div>
-<div class ="block white section scrollspy" id="about_me">
+<div class ="block white section scrollspy about-me" id="about_me">
     <div class="container"> 
         <div class="row">
         <div class="col l6 m6 s12">
@@ -179,7 +179,7 @@
             </div>
         </div>
 </div>
-<div class = "block blue" id="education">
+<div class = "block blue education" id="education">
     
     <p class="bold section-title white-text">Education</p>
     <div class="container valign-wrapper">
