--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container" style="margin:auto">
     <p class="bold section-title white-text">Education</p>
     
-        <ul class="collection" id="staggered-list-education" style="color:white; background-color:transparent;margin:0 auto; width:70%; margin-top:80px; display:none"> 
+        <ul class="collection" id="staggered-list-education" style="color:white; background-color:transparent;margin:0 auto; width:70%; margin-top:10%; display:none"> 
             <li class="collection-item avatar" style="background-color:transparent">
                 <div class="container">
                     <div class="row" style="margin-bottom:auto;">
